applications/test-nginx/namespace-test-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test-nginx
spec: {}
status: {}
