applications/test-nginx/service-test-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-nginx
  name: test-nginx
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-nginx
  sessionAffinity: None
  type: ClusterIP
